Fix content alignment in the office card.

--- a/ui/src/app/component/office/office.component.scss
+++ b/ui/src/app/component/office/office.component.scss
@@ -15,15 +15,10 @@ mat-card-subtitle {
   width: 180px;
 }
 
-mat-card-title {
-  text-wrap: nowrap;
-}
-
-// TODO: Button hides when the viewport is too small
 .menu-button {
+  display: inline-block;
   border-radius: 100%;
-  margin-left: auto;
-  min-width: 0;
+  min-width: var(--mdc-text-button-container-height);
   width: var(--mdc-text-button-container-height);
   mat-icon {
     transform: scale(1.4);
@@ -34,7 +29,14 @@ mat-card-title {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 16px;
+
+  @media (max-width: 400px) {
+    display: none;
+  }
+
+  .office-managers {
+    text-wrap: wrap;
+  }
 }
 
 div.office-stats-horizontal {
